--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Naranjas la Ribera</h1>
     </header>
+    <!--Barra de navegación-->
     <nav>
         <ol>
             <li><a href="">Nosotros</a></li>
@@ -21,26 +22,30 @@
             <li><a href="">Ventas internacionales</a></li>    
     </nav>
     <main>
+        <!--Parrafo centro-->
         <p class="estilo1">
             <span class="sub">Naranjas La Ribera somos una empresa familiar valenciana que nos dedicamos al cultivo y venta de</span> Naranjas y Mandarinas <span class="sub">de Valen</span>cia desde hace mas de 100 años.
         </p>
+        <!--Parrafo izquierda-->
         <p class="estilo2">
             Recibimos pedidos desde la Tienda Virtual situada en nuestra página web y por teléfono, en el 963123456. Puede ralizar su pedido sin dar sus datos bancarios ni de su tarjeta, ya que solo cobramos después de que hayan probado nuestro producto.
         </p>
+        <!--Parrafo derecha-->
         <p class="estilo3">
             Nuestros productos estan cultivados de forma natural, por lo que mantienen su sabor. Es por eso que además de ser los favoritos de muchas familias españolas, tambien lo somos de prestigiosos cocineros y restauradores, que utilizan nuestras naranjas para elaborar sus mejores platos.
         </p>
     </main>
-    
-    <footer>
-        <p>
+    <!--Sección abajo -->
+    <section id="ventajas">      
             Nuestras ventajas:
             <ol>
                 <li>Naranjas recien cogidas del árbol</li>
                 <li>Naranjas con menos qímicos y cera</li>
                 <li>Envíos direstos a tu domicilio en 24 horas</li>
-            </ol>
-        </p>
+            </ol>      
+    </section> 
+    <!--Copiright--> 
+    <footer>       
         <small>Copiright &copy; Abastos Developers HTML</small>
     </footer>
 </body>
